refactor: make AuthSpotifyResponse a response rather than a schema
